--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -7,7 +7,7 @@
     --gray-color: #ccc;
     --red-color: #ee6e73;
     --light-grey-color: #eee;
-    --tundora: background:rgba(96, 212, 212, 0.16);
+    --tundora: # ;
 }
 @font-face {
   font-family: "Jost";
@@ -310,6 +310,10 @@ background: tomato;
  margin: 0 auto;
  background-color: black;
 }
+.bg-grey {
+    /* background-color: #eee; */
+    background-color: rgba(96, 212, 212, 0.16);;
+}
 .grey {
   
   padding: 0px 0;
@@ -322,18 +326,16 @@ color: grey;
 transition: all .4s;
 }
 .card02 {
- max-width: 270px;
+text-align: left;
+ max-width: 370px;
  width: 100%;
  padding: 5px;
- margin: 5px;
- /* background-color: #eee; */
+ margin: 5px 10px;
+
  display: flex;
  flex-direction: column;
 }
-/* .card:hover {
-    transition: all .3s;
-    background:rgba(96, 212, 212, 0.16);
-} */
+
 .monitors {
  background-color: #eee;   
 }
@@ -953,4 +955,119 @@ color: grey;
   margin-bottom: 10px;
    
 }    
+/* ============================= Main ============================ */
 
+/* ============================= Category Page ============================ */
+.breadcrumbs {
+    margin: 30px 0;
+    background-color: #fff;
+    padding: 1rem;
+}
+
+.breadcrumbs ul {
+    list-style: none;
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.breadcrumbs a {
+    text-decoration: none;
+    color: var(--contrast-color);
+    transition: all .5s;
+    margin-right: 0.5rem;
+}
+
+.breadcrumbs a:hover {
+    color: var(--accent-color);
+}
+
+.breadcrumbs a::after {
+    content: "/";
+    padding-left: 0.5rem;
+    color: var(--contrast-color);
+}
+section {
+    padding: 50px 0;
+}
+
+.section-title {
+    position: relative;
+    text-transform: uppercase;
+    color: var(--contrast-color);
+    font-weight: 700;
+}
+
+.section-title span {
+    background-color: var(--bg-color);
+    padding-right: 1rem;
+    position: relative;
+    z-index: 1;
+}
+
+.section-title::after {
+    position: absolute;
+    content: "";
+    width: 100%;
+    top: 50%;
+    left: 0;
+    border-top: 1px dashed var(--text-color);
+}
+
+label.required::before {
+    content: '* ';
+    color: #dc3545;
+    font-weight: bold;
+}
+.sidebar {
+    background-color: #fff;
+    padding: 0.5rem 1rem;
+    margin-bottom: 1rem;
+}
+
+.filter-block:not(:last-child) {
+    margin-bottom: 2rem;
+}
+
+.filter-block .form-check {
+    margin-bottom: 0.5rem;
+}
+
+.form-check-input[type="checkbox"] {
+    border-radius: 0;
+    border-color: var(--gray-color);
+}
+
+.form-check-input:focus {
+    border-color: var(--gray-color);
+    box-shadow: none;
+}
+
+.form-check-input:checked {
+    background-color: var(--accent-color);
+    border-color: var(--accent-color);
+}
+
+.filter-block .badge {
+    color: var(--text-color);
+}
+
+.page-link {
+    color: var(--contrast-color);
+}
+
+.page-link:hover {
+    color: #fff;
+    background-color: var(--accent-color);
+    border-color: var(--accent-color);
+}
+
+.active>.page-link,
+.page-link.active {
+    background-color: var(--accent-color);
+    border-color: var(--accent-color);
+}
+
+.sidebar .collapse-filters-btn {
+    color: var(--contrast-color);
+}
