--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -182,6 +182,18 @@ transition: all .4s;
  color: darkslategray; 
  
 }
+.story img {
+    max-width: 700px;
+    width: 100%;
+}
+.loudspeakers img {
+    max-width: 1000px;
+    width: 100%;
+}
+.s800d img {
+    max-width: 1000px;
+    width: 100%;
+}
 .show {
   display: flex;
   flex-direction: column;
